adjust for folders

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,10 +9,9 @@
             "type": "go",
             "request": "launch",
             "mode": "auto",
-            "program": "${workspaceFolder}/main.go",
+            "program": "${workspaceFolder}/source/cmd/main.go",
             "env": {},
-            "args": [],
-            "preLaunchTask": "${defaultBuildTask}"
+            "args": []
         }
     ]
 }
