--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -6,7 +6,7 @@
         {
             "label": "Build",
             "type": "shell",
-            "command": "go build -o absensi",
+            "command": "go build -o bin/absensi -v source/cmd/main.go",
             "problemMatcher": [],
             "group": {
                 "kind": "build",
