add more static data

--- a/.env
+++ b/.env
@@ -1,3 +1,8 @@
 BaseURL=https://myapps.lintasarta.net/api/
 UserName=res
 Password=P4ssw0rd2
+Gambar=685c3ff4e7784f1185fc2dea508a64ea.jpg
+Longitude=-6.234804930561404
+Lattitude=106.91113570354295
+Description=Di Rumah Saja
+Region=Asia/Jakarta
