--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -81,6 +81,7 @@ jobs:
         upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps 
         asset_path: ./release-mac-amd64 
         asset_name: mac-amd64
+        asset_content_type: application/octet-stream
         
     - name: Upload Release Windows Asset
       id: upload-release-asset-windows
